--- a/cytk_NX2TCMigrationTool.csproj
+++ b/cytk_NX2TCMigrationTool.csproj
@@ -26,12 +26,21 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Update="src\UI\Windows\BOMBrowser.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>BOMBrowser.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Update="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="src\UI\Windows\BOMBrowser.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>BOMBrowser.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
 
