--- a/src/cytk_NX2TCMigrationTool.csproj
+++ b/src/cytk_NX2TCMigrationTool.csproj
@@ -25,6 +25,21 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="NXOpen">
+      <HintPath>..\..\..\..\..\..\SPLM\NX\NX2312\NXBIN\managed\NXOpen.dll</HintPath>
+    </Reference>
+    <Reference Include="NXOpen.UF">
+      <HintPath>..\..\..\..\..\..\SPLM\NX\NX2312\NXBIN\managed\NXOpen.UF.dll</HintPath>
+    </Reference>
+    <Reference Include="NXOpen.Utilities">
+      <HintPath>..\..\..\..\..\..\SPLM\NX\NX2312\NXBIN\managed\NXOpen.Utilities.dll</HintPath>
+    </Reference>
+    <Reference Include="NXOpenUI">
+      <HintPath>..\..\..\..\..\..\SPLM\NX\NX2312\NXBIN\managed\NXOpenUI.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
