--- a/src/cytk_NX2TC_NXWorker/cytk_NX2TC_NXWorker.csproj
+++ b/src/cytk_NX2TC_NXWorker/cytk_NX2TC_NXWorker.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{EA04EBA5-D610-4424-B8BC-2490DF40168D}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>cytk_NX2TC_NXWorker</RootNamespace>
     <AssemblyName>cytk_NX2TC_NXWorker</AssemblyName>
@@ -33,29 +33,24 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="NXOpen, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(UGII_BASE_DIR)\nxbin\managed\NXOpen.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="NXOpen">
+      <HintPath>..\..\..\..\..\..\..\SPLM\NX\NX2312\NXBIN\managed\NXOpen.dll</HintPath>
     </Reference>
-    <Reference Include="NXOpen.UF, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(UGII_BASE_DIR)\nxbin\managed\NXOpen.UF.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="NXOpen.UF">
+      <HintPath>..\..\..\..\..\..\..\SPLM\NX\NX2312\NXBIN\managed\NXOpen.UF.dll</HintPath>
     </Reference>
-    <Reference Include="NXOpen.Utilities, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(UGII_BASE_DIR)\nxbin\managed\NXOpen.Utilities.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="NXOpen.Utilities">
+      <HintPath>..\..\..\..\..\..\..\SPLM\NX\NX2312\NXBIN\managed\NXOpen.Utilities.dll</HintPath>
     </Reference>
-    <Reference Include="NXOpenUI, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(UGII_BASE_DIR)\nxbin\managed\NXOpenUI.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="NXOpenUI">
+      <HintPath>..\..\..\..\..\..\..\SPLM\NX\NX2312\NXBIN\managed\NXOpenUI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
